# zestify

./: .augment-guidelines  .env.example  .gitignore  Makefile  README.md  pyproject.toml  replay_api.py  request_log.jsonl  todo.md
.cursor/: environment.json
.github/workflows/: flutter_ci.yml
backend/: __init__.py  test-requirements.txt
backend/docs/: README.md
backend/examples/: onboarding_example.py
backend/llm/: openrouter_client.py
backend/memory/: manager.py  schemas.py  test_memory_schema.py
backend/memory/templates/: activities.jsonnet  conversation_memory.jsonnet  health_metrics.jsonnet  medical_history.jsonnet  (+2 more)
backend/memory_templates/: base.jsonnet  biometrics.jsonnet  workouts.jsonnet
backend/prompts/: README.md  __init__.py  chat.py  onboarding_conversation.py  system_prompts.py
backend/schemas/: __init__.py  user_profile.py
backend/services/: README.md  README_SERVER.md  __init__.py  ai_memory_research.md  cli.py  conversation_handler.py  extract_health_data.py  local_server.py  memory_utils.jsonnet  onboarding.py  onboarding_cli.py  openrouter_client.py  todo.md  workout_goal_prompt_research.md
data/0e9efacd-717f-4342-b20a-60f8f92fadba/: activities.json  biometrics.json  user_info.json  workout_memory.json  workouts.json
data_structure_examples/: health_data_structure.json  workout_data_structure.json  workout_data_structure.yaml
docs/: healthkit_reporter_migration.md  replay_requests.md
user_profiles/: health_metrics_ed98da97-effd-4414-9223-f770c95f5ed5.yaml  profile_ed98da97-effd-4414-9223-f770c95f5ed5.yaml
(+91 files in other folders)
